[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.4", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.18.0"
cgmath = "0.18"
pollster = "0.3"
bytemuck = { version = "1.14.3", features = ["derive"] }
image = {version = "0.24.9", features = ["jpeg", "png"] }
anyhow = "1.0.80"
rand = "0.8.5"
egui = "0.25.0"
egui-winit = "0.25.0"
egui-wgpu = "0.25.0"
noise = "0.8.2"